# tree-sitter-lint

./: .gitignore  .tree-sitter-lint.yml  Cargo.toml  README.md  rustfmt.toml
.tree-sitter-lint/local_rules/: Cargo.toml
.tree-sitter-lint/local_rules/src/: lib.rs
.tree-sitter-lint/local_rules/src/rules/: mod.rs  no_default_default.rs  no_lazy_static.rs  prefer_impl_param.rs  require_blazing_keyword.rs
.tree-sitter-lint/tree-sitter-lint-local/: Cargo.toml
.tree-sitter-lint/tree-sitter-lint-local/src/: lib.rs  main.rs
examples/plugins/tree-sitter-lint-plugin-replace-foo-with-bar/src/: lib.rs
local_rules/: Cargo.toml
local_rules/src/: lib.rs
local_rules/src/rules/: prefer_impl_param.rs
proc_macros/: Cargo.toml
proc_macros/src/: builder_args.rs  helpers.rs  instance_provider_factory.rs  lib.rs  rule.rs  rule_tests.rs  shared.rs  violation.rs
src/: aggregated_queries.rs  args.rs  cli.rs  config.rs  configuration.rs  context.rs  environment.rs  event_emitter.rs  fixing.rs  lib.rs  lsp.rs  macros.rs  node.rs  plugin.rs  rule.rs  rule_tester.rs  slice.rs  text.rs  treesitter.rs  violation.rs  visit.rs
src/config/: config_file.rs  mod.rs
src/context/: backward_tokens.rs  count_options.rs  fix.rs  get_tokens.rs  mod.rs  node_parent_cache.rs  provided_types.rs  skip_options.rs
src/fixing/: accumulated_edits.rs  fixer.rs  mod.rs
src/rules/: mod.rs  no_default_default.rs  no_lazy_static.rs  prefer_impl_param.rs
src/tests/: fixing.rs  mod.rs  rules.rs
src/tests/rules/: event_emitter.rs  meta.rs  methods.rs  mod.rs  options.rs  provided_types.rs  rule_tester.rs  state.rs  tokens.rs  violations.rs
tests/: no_default_default.rs  prefer_impl_param.rs
tests/fixtures/tree-sitter-lint-plugin-replace-foo-with/: Cargo.toml
tests/fixtures/tree-sitter-lint-plugin-replace-foo-with-bar/: Cargo.toml
tests/fixtures/tree-sitter-lint-plugin-replace-foo-with-bar/src/: lib.rs
tests/fixtures/tree-sitter-lint-plugin-replace-foo-with/src/: lib.rs
