[package]
name = "tree-sitter-lint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.17"
derive_builder = "0.12.0"
proc_macros = { path = "proc_macros" }
regex = "1.9.1"
tree-sitter = "0.20.10"
tree-sitter-grep = { git = "https://github.com/helixbass/tree-sitter-grep", rev = "3d4682c" }
tree-sitter-rust = "0.20.3"

[[bin]]
name = "tree-sitter-lint"
