[package]
name = "tree-sitter-lint"
version = "0.0.1-dev.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = [
  "Julian Rosse <julian@helixbass.net>",
]
description = """
tree-sitter-lint is (intended to be) a multi-language
linter supporting custom lint rules based on tree-sitter.
"""
homepage = "https://github.com/helixbass/tree-sitter-lint"
repository = "https://github.com/helixbass/tree-sitter-lint"
keywords = ["tree-sitter", "lint", "linter"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.17"
derive_builder = "0.12.0"
proc_macros = { package = "tree_sitter_lint_proc_macros", path = "proc_macros", version = "0.0.1-dev.0" }
regex = "1.9.1"
tree-sitter-grep = { package = "tree_sitter_lint_tree-sitter-grep", git = "https://github.com/helixbass/tree-sitter-grep", rev = "355ea2b", version = "0.1.0" }
rayon = "1.7.0"
serde = "1.0.175"
serde_yaml = "0.9.25"
serde_json = "1.0.103"
squalid = { git = "https://github.com/helixbass/squalid", rev = "bfefff7" }
quote = "1.0.32"
Inflector = "0.11.4"
dashmap = "5.5.0"
tower-lsp = "0.19.0"
tokio = { version = "1.29.1", features = ["full"] }
better_any = "0.2.0"
tracing = "0.1.37"
once_cell = "1.18.0"
const_format = "0.2.31"
colored = "2.0.4"
itertools = "0.11.0"

[[bin]]
name = "tree-sitter-lint"

[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "c16b90d" }
