[package]
name = "tree_sitter_lint_proc_macros"
version = "0.0.1-dev.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.26", features = ["full"] }

[lib]
proc-macro = true
