[package]
name = "local_rules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-lint = { path = "../.." }

[patch.crates-io]
tree-sitter = { git = "https://github.com/helixbass/tree-sitter", rev = "57e98fb0" }
