[package]
name = "tree-sitter-lint-local"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter-lint = { path = "../.." }
local_rules = { path = "../local_rules" }
tree-sitter-lint-plugin-replace-foo-with = { path = "../.././tests/fixtures/tree-sitter-lint-plugin-replace-foo-with" }

[[bin]]
name = "tree-sitter-lint-local"
