[package]
name = "tree-sitter-lint-local"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter-lint = { path = "../.." }
local_rules = { path = "../local_rules" }
tree-sitter-lint-plugin-replace-foo-with = { path = "../.././tests/fixtures/tree-sitter-lint-plugin-replace-foo-with" }

[patch.crates-io]
tree-sitter = { git = "https://github.com/helixbass/tree-sitter", rev = "57e98fb0" }

[[bin]]
name = "tree-sitter-lint-local"

[[bin]]
name = "tree-sitter-lint-local-lsp"

