[package]
name = "tree-sitter-lint-local"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter-lint = { path = "../.." }
local_rules = { path = "../local_rules" }
tree-sitter-lint-plugin-replace-foo-with = { path = "../.././tests/fixtures/tree-sitter-lint-plugin-replace-foo-with" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "fmt", "env-filter"] }
tracing-chrome = "0.7.1"

[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "c16b90d" }

[[bin]]
name = "tree-sitter-lint-local"

[[bin]]
name = "tree-sitter-lint-local-lsp"

[workspace]
